Fix overflow in chamber

--- a/hydroponic-controller-app/src/components/Scenes/MainSceneCards/Chamber.scss
+++ b/hydroponic-controller-app/src/components/Scenes/MainSceneCards/Chamber.scss
@@ -47,6 +47,7 @@ h2 {
 
 .contents p {
     font-size: 15px;
+    height: auto;
 }
 
 @keyframes graph_shadow {
